# Compiler-design

./: README.md  index.html  package-lock.json  server.js
BanglaCompiler/: CMakeLists.txt  README.md
BanglaCompiler/src/: ast.cpp  ast.h  codegen.cpp  codegen.h  lexer.l  main.cpp  parser.y  repl.cpp  semantic.cpp  semantic.h
BanglaCompiler/test/: basic.bgl  basic_temp.bgl  loop.bgl
Online-compiler/: README.md  package.json
